// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EstadoVazio snapshot > renders EstadoVazioGenerico variant with defaults 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-4 text-center animate-in fade-in-0 zoom-in-95 duration-300"
  >
    <div
      class="mb-4 text-muted-foreground/50 animate-in fade-in-0 zoom-in-50 duration-500"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox h-12 w-12 stroke-[1.5]"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
    </div>
    <h3
      class="font-titulo text-lg font-semibold text-foreground mb-1"
    >
      Nada por aqui
    </h3>
    <p
      class="text-sm text-muted-foreground max-w-sm mb-6"
    >
      Nao ha itens para exibir no momento.
    </p>
  </div>
</div>
`;

exports[`EstadoVazio snapshot > renders EstadoVazioHabitos variant 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-4 text-center animate-in fade-in-0 zoom-in-95 duration-300"
  >
    <div
      class="mb-4 text-muted-foreground/50 animate-in fade-in-0 zoom-in-50 duration-500"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-target h-16 w-16 stroke-[1.25]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <circle
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            cx="12"
            cy="12"
            r="2"
          />
        </svg>
        <div
          class="absolute -top-1 -right-1 h-3 w-3 rounded-full bg-primary animate-pulse"
        />
      </div>
    </div>
    <h3
      class="font-titulo text-lg font-semibold text-foreground mb-1"
    >
      Nenhum habito cadastrado
    </h3>
    <p
      class="text-sm text-muted-foreground max-w-sm mb-6"
    >
      Crie habitos para construir uma rotina mais saudavel e alcançar seus objetivos.
    </p>
  </div>
</div>
`;

exports[`EstadoVazio snapshot > renders EstadoVazioTarefas variant 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-4 text-center animate-in fade-in-0 zoom-in-95 duration-300"
  >
    <div
      class="mb-4 text-muted-foreground/50 animate-in fade-in-0 zoom-in-50 duration-500"
    >
      <div
        class="relative"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clipboard-list h-16 w-16 stroke-[1.25]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="4"
            rx="1"
            ry="1"
            width="8"
            x="8"
            y="2"
          />
          <path
            d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
          />
          <path
            d="M12 11h4"
          />
          <path
            d="M12 16h4"
          />
          <path
            d="M8 11h.01"
          />
          <path
            d="M8 16h.01"
          />
        </svg>
        <div
          class="absolute -bottom-1 -right-1 h-6 w-6 rounded-full bg-primary/10 flex items-center justify-center"
        >
          <span
            class="text-xs text-primary font-semibold"
          >
            0
          </span>
        </div>
      </div>
    </div>
    <h3
      class="font-titulo text-lg font-semibold text-foreground mb-1"
    >
      Nenhuma tarefa encontrada
    </h3>
    <p
      class="text-sm text-muted-foreground max-w-sm mb-6"
    >
      Comece criando sua primeira tarefa para organizar suas atividades e aumentar sua produtividade.
    </p>
  </div>
</div>
`;

exports[`EstadoVazio snapshot > renders base component with title and description 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-12 px-4 text-center animate-in fade-in-0 zoom-in-95 duration-300"
  >
    <h3
      class="font-titulo text-lg font-semibold text-foreground mb-1"
    >
      Sem dados
    </h3>
    <p
      class="text-sm text-muted-foreground max-w-sm mb-6"
    >
      Nenhum item disponivel.
    </p>
  </div>
</div>
`;
